--- a/vk_group_wall_grabber.ipynb
+++ b/vk_group_wall_grabber.ipynb
@@ -38,9 +38,9 @@
     "    return api.wall.get(owner_id = pub_id, offset = offset, count = count)\n",
     "\n",
     "def main():\n",
-    "    TOKKEN = str(input(\"Paste your tokken: \"))\n",
+    "    TOKEN = str(input(\"Paste your token: \"))\n",
     "    GROUP_ID = int(input(\"Paste group id: \"))\n",
-    "    session = vk.Session(access_token=TOKKEN)\n",
+    "    session = vk.Session(access_token=TOKEN)\n",
     "    api = vk.API(session, v='5.60')\n",
     "\n",
     "    r = get_wall(GROUP_ID, 100)\n",
