--- a/vk_group_wall_grabber.ipynb
+++ b/vk_group_wall_grabber.ipynb
@@ -67,7 +67,6 @@
     "def main():\n",
     "    TOKKEN = str(input(\"Paste your tokken: \"))\n",
     "    GROUP_ID = int(input(\"Paste group id: \"))\n",
-    "    NAME = input(\"Paste file name: \")\n",
     "    \n",
     "    session = vk.Session(access_token=TOKKEN)\n",
     "    api = vk.API(session, v='5.60')\n",
@@ -95,7 +94,7 @@
     "        list_of_posts.extend(data(remainder_r['items']))\n",
     "        print('oop!')\n",
     "\n",
-    "    with open(NAME+'.json', 'w') as f:\n",
+    "    with open(str(GROUP_ID)+'.json', 'w') as f:\n",
     "        json.dump(list_of_posts, f)\n",
     "\n",
     "    print('Done!')\n",
